@@ -3,6 +3,9 @@
 	Backported from mainline
 	2017-06-13  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/80973
+	* g++.dg/ubsan/pr80973.C: New test.
+
 	PR c++/80984
 	* g++.dg/opt/nrv18.C: New test.
 
